--- a/Serbian_Cyrillic.lng
+++ b/Serbian_Cyrillic.lng
@@ -1,7 +1,7 @@
 |~LANGUAGENAME|
 |Српски|
 |~LANGUAGEVERSION|
-|1.39|
+|1.40|
 |~LANGUAGEAUTHOR|
 |Љуба Ћировић|
 |~LANGUAGEAUTHOREMAIL|
@@ -1384,5 +1384,11 @@
 |Главни кључ је измењен!|
 |The pattern is invalid|
 |Модел је неисправан|
+|It is important that you remember where the database file is stored.|
+|Важно је да запамтите где је ускладиштена датотека база података.|
+|You should regularly create a backup of the database file (onto an independent data storage device).|
+|Требало би редовно да правите резервну копију датотеке базе података (на неком независном уређају за складиштење података).|
+|Your data will be stored in a KeePass database file, which is a regular file. When saving for the first time, you will be prompted to specify the location where KeePass should save this file.|
+|Ваши подаци ће бити ускладиштени у KeePass-ову датотеку базе података, која је обична датотека. Када је први пут будете сачували, бићете упитани да наведете место где би KeePass требало да сачува ову датотеку.|
 |~LANGISO6391CODE|
 |sr|
