--- a/Serbian_Latin.lng
+++ b/Serbian_Latin.lng
@@ -1,7 +1,7 @@
 |~LANGUAGENAME|
 |Srpski|
 |~LANGUAGEVERSION|
-|1.39|
+|1.40|
 |~LANGUAGEAUTHOR|
 |Ljuba Ćirović|
 |~LANGUAGEAUTHOREMAIL|
@@ -1384,5 +1384,11 @@
 |Glavni ključ je izmenjen!|
 |The pattern is invalid|
 |Model je neispravan|
+|It is important that you remember where the database file is stored.|
+|Važno je da zapamtite gde je uskladištena datoteka baza podataka.|
+|You should regularly create a backup of the database file (onto an independent data storage device).|
+|Trebalo bi redovno da pravite rezervnu kopiju datoteke baze podataka (na nekom nezavisnom uređaju za skladištenje podataka).|
+|Your data will be stored in a KeePass database file, which is a regular file. When saving for the first time, you will be prompted to specify the location where KeePass should save this file.|
+|Vaši podaci će biti uskladišteni u KeePass-ovu datoteku baze podataka, koja je obična datoteka. Kada je prvi put budete sačuvali, bićete upitani da navedete mesto gde bi KeePass trebalo da sačuva ovu datoteku.|
 |~LANGISO6391CODE|
 |sr|
