--- a/Lithuanian.lng
+++ b/Lithuanian.lng
@@ -2,7 +2,7 @@
 |Lietuvių|
 
 |~LANGUAGEVERSION|
-|1.39|
+|1.40|
 
 |~LANGUAGEAUTHOR|
 |Vytautas Rėkus/Donaldas Apanavičius|
@@ -2083,3 +2083,12 @@
 
 |Consider similar dashes as identical|
 |Panašius brūkšnius laikyti identiškais|
+
+|It is important that you remember where the database file is stored.|
+|Svrbu prisiminti, kur įrašytas duomenų bazės failas.|
+
+|You should regularly create a backup of the database file (onto an independent data storage device).|
+|Reikia reguliariai daryti atsarginę duomenų bazės kopiją į atskirą atmintinę.|
+
+|Your data will be stored in a KeePass database file, which is a regular file. When saving for the first time, you will be prompted to specify the location where KeePass should save this file.|
+|Duomenys bus įrašyti į KeePass duoneų bazę, kuri yra įprastas failas. Pirmąkart įrašant, bus paprašyta nurodyti vietą, kur KeePass turėtų įrašyti šį failą.|
