--- a/Hungarian.lng
+++ b/Hungarian.lng
@@ -1,7 +1,7 @@
 |~LANGUAGENAME|
 |Magyar|
 |~LANGUAGEVERSION|
-|1.39|
+|1.40|
 |~LANGUAGEAUTHOR|
 |herka (1.13) • Zotius (1.18 verziótól)|
 |~LANGUAGEAUTHOREMAIL|
@@ -472,12 +472,16 @@
 |Kulcs-fájl kézi kiválasztása...|
 |Save key file manually to...|
 |A kulcs-fájl kézi mentése mint...|
-|Enter the new composite master key.|
-|Add meg az adatbázis új összetett mester kulcsát.|
 |Repeat the new master password for this database.|
 |Mester kulcs megismétlése.|
 |Change Master Key|
 |Mesterkulcs módosítása|
+|It is important that you remember where the database file is stored.|
+|Fontos, hogy emlékezz az adatbázis fájl tárolási helyére.|
+|You should regularly create a backup of the database file (onto an independent data storage device).|
+|Rendszeresen készíts biztonsági másolatot az adatbázisról (egy eltérõ adattároló egységre).|
+|Your data will be stored in a KeePass database file, which is a regular file. When saving for the first time, you will be prompted to specify the location where KeePass should save this file.|
+|Adataid egy KeePass adatbázis fájlban kerülnek tárolásra, mely egy általános fájl. Az elsõ alkalommal történõ mentéskor meg kell határoznod, hogy a KeePass hova mentse ezt a fájlt.|
 |Plugin|
 |Bõvítmény|
 |Plugins|
