--- a/Russian.lng
+++ b/Russian.lng
@@ -1,6 +1,6 @@
 ﻿|~LANGUAGENAME|			|Russian|
 |~LANGISO6391CODE|		|ru|
-|~LANGUAGEVERSION|		|1.39|
+|~LANGUAGEVERSION|		|1.40|
 |~LANGUAGEAUTHOR|		|Dmitry Yerokhin, Andrew Gavrushenko|
 |~LANGUAGEAUTHOREMAIL|		|erodim@mail.ru|
 
@@ -365,8 +365,8 @@
 |Move Group One &Right|		|Переместить на уровень в&право|
 
 |Hide &User Names Behind Asterisks (***)|	|Показывать звёздочки (***) вместо лог&инов|
-|Attachment:|			|Прикрепление:|
-|Attachment|			|Прикрепление|
+|Attachment:|			|Вложение:|
+|Attachment|			|Вложение|
 |&Attachment|			|Прикреплённый &файл|
 
 |Generate a random password...|		|Создать случайный пароль...|
@@ -609,7 +609,7 @@
 |Value|					|Значение|
 |Enable remote control (allow applications to communicate with KeePass)|	|Разрешить удалённое управление (другие приложения могут общаться с KeePass)|
 
-|Attachment Description|		|Описание прикрепления|
+|Attachment Description|		|Описание вложения|
 |Make sure the media that contains the key file is inserted and that KeePass has the rights to access it (check file access rights, ensure that no other application is blocking the file, ...).|	|Убедитесь, что носитель с ключевым файлом вставлен, а у KeePass есть нужные права доступа (проверьте доступ к файлу, не блокируют ли файл другие приложения и т.д.).|
 
 |Arguments|				|Аргументы|
@@ -787,3 +787,6 @@
 |The regular expression is invalid.|	|Некорректное регулярное выражение.|
 |Tray icon|				|Значок в области уведомлений|
 
+|It is important that you remember where the database file is stored.|	|Важно помнить место сохранения файла с базой данных.|
+|You should regularly create a backup of the database file (onto an independent data storage device).|	|Следует регулярно создавать резервную копию файла базы данных (на независимом устройстве хранения).|
+|Your data will be stored in a KeePass database file, which is a regular file. When saving for the first time, you will be prompted to specify the location where KeePass should save this file.|	|Ваши данные будут храниться в базе данных KeePass, которая является обычным файлом. При первом сохранении вам будет предложено указать место, где KeePass должен сохранить этот файл.|
