--- a/Portuguese_PT.lng
+++ b/Portuguese_PT.lng
@@ -1,5 +1,5 @@
 ﻿|~LANGUAGENAME||Portuguese (Português, Portugal)|
-|~LANGUAGEVERSION||1.39|
+|~LANGUAGEVERSION||1.40|
 |~LANGUAGEAUTHOR||José Gonçalves|
 |~LANGUAGEAUTHOREMAIL||joseaagoncalves@gmail.com, http://www.eufisica.com|
 |&Close||Fechar|
@@ -322,3 +322,7 @@
 |Specify the master key.|| Especifique a chave mestra. |
 |Specify the new master key.|| Especifique a nova chave mestra.|
 |The master key has been changed!|| A chave mestra foi alterada!|
+
+|It is important that you remember where the database file is stored.||É importante lembrar onde está o ficheiro da base de dados guardado.|
+|You should regularly create a backup of the database file (onto an independent data storage device).||Deve criar regularmente um backup do ficheiro da base de dados (em um dispositivo de armazenamento de dados independente).|
+|Your data will be stored in a KeePass database file, which is a regular file. When saving for the first time, you will be prompted to specify the location where KeePass should save this file.||Os seus dados serão armazenados em um ficheiro de base de dados KeePass, que é um arquivo normal. Ao guardar pela primeira vez, será solicitado o local onde o KeePass deve guardar esse ficheiro.|
