--- a/Lithuanian.lng
+++ b/Lithuanian.lng
@@ -2,7 +2,7 @@
 |Lietuvių|
 
 |~LANGUAGEVERSION|
-|1.40|
+|1.41|
 
 |~LANGUAGEAUTHOR|
 |Vytautas Rėkus/Donaldas Apanavičius|
@@ -1062,9 +1062,6 @@
 |N&o Auto-Sort|
 |Aut&omatiškai nerikiuoti|
 
-|Auto-sorting of the entry list is enabled; you cannot move entries manually.|
-|Įrašai rikiuojami automatiškai, todėl rankiniu būdu įrašai neperkeliami.|
-
 |Perform Auto-&Type|
 |Vykdyti &automatinį įvedimą|
 
@@ -1561,7 +1558,7 @@
 |(Automatiškai sugeneruoti slaptažodžiai naujam įrašui)|
 
 |Profile|
-|Metmenys|
+|Profilis|
 
 |Length of generated password:|
 |Sugeneruotojo slaptažodžio ilgis:|
@@ -1582,10 +1579,10 @@
 |Naudoti lokalės datos/laiko formatą vietoje ISO|
 
 |Save as Profile|
-|Įrašyti kaip metmenis|
+|Įrašyti kaip profilį|
 
 |Save current settings as password generator profile.|
-|Įrašyti dabartinius parametrus kaip slaptažodžių generatoriaus metmenis.|
+|Įrašyti dabartinius parametrus kaip slaptažodžių generatoriaus profilį.|
 
 |Please enter a name for the new password generator profile, or select an existing profile to overwrite it:|
 |Įveskite naują failo pavadinimą slaptažodžių generatoriaus metmenims arba nurodykite esančius metmenis perrašymui:|
@@ -2092,3 +2089,9 @@
 
 |Your data will be stored in a KeePass database file, which is a regular file. When saving for the first time, you will be prompted to specify the location where KeePass should save this file.|
 |Duomenys bus įrašyti į KeePass duoneų bazę, kuri yra įprastas failas. Pirmąkart įrašant, bus paprašyta nurodyti vietą, kur KeePass turėtų įrašyti šį failą.|
+
+|Do you want to deactivate automatic sorting?|
+|Ar norite deaktyvinti automatinį rikiavimą?|
+
+|Entries currently cannot be rearranged, because automatic sorting is activated.|
+|Įrašai dabar negali būti pertvarkyti, kadangi automatinį rikiavimas yra aktyvus.|
